--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ div.friend
 	margin-right: auto;
 	border-top-style: solid;
 	border-top-width: 1px;
-	border-top-color: #D8D2EC;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	border-top-color: #E9E9E9;
+	padding: 10px 5px 10px 5px;
+}
+
+div.friend:hover
+{
+	/*background-color: #FEFFF1;*/
 }
 
 img.friend
@@ -22,23 +26,51 @@ div.friendText
 	margin-left: 60px;
 }
 
-a.friend, a.friend:visited
+a.friend
 {
-	visibility: hidden;
-	float: right;
-	color: white;
-	font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-	font-weight: bold;
-	background-color: #3b5998;
+	cursor: pointer;
+	color: #3B5998;
 	text-decoration: none;
-	padding: 3px 2px 3px 2px;
-	position: relative;
-	top: -17px;
+	font-weight: bold;
+	font-size: 13px;
+	line-height: 1.28;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
 }
 
 a.friend:hover
 {
-	background-color: #5b79b8;
+	text-decoration: underline;
+}
+
+.page_links
+{
+	color: gray;
+}
+
+.pages
+{
+	padding: 0.5px 1px 0.5px 1px;
+}
+
+a.pages, a.pages:visited
+{
+	text-decoration: none;
+	background-color: white;
+	color: gray;
+}
+
+a.pages:hover
+{
+	color: white;
+	background-color: #627AAD;
+	cursor: pointer;
+}
+
+span.pages
+{
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
 }
 
 p.name, p.status, p.score
@@ -53,20 +85,114 @@ p.status
 	color: #989898;
 }
 
-a.score:hover
+a.score
 {
-	background-color: #989898;
-	color: white;
-	cursor: pointer;
+	float: right;
+	position: relative;
+	top: -15px;
+}
+
+a.mutual_friends
+{
+	color: gray;
+	text-decoration: none;
+	font-weight: normal;
+	font-size: 11px;
+	list-style-type: none;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	line-height: 1.28;
+}
+
+a.mutual_friends:hover
+{
+	text-decoration: underline;
+}
+
+table.details
+{
+	width: 100%;
+	width: 225px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 14px;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	color: #333;
+	line-height: 1.28;
+	text-align: left;
+	direction: ltr;
 }
 
 td
 {
-	text-align: right;
+	text-align: center;
 }
 
-table
+img.loading
 {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.button_outside_border_blue{
+	width: 100px;
+	border: solid #29447e 1px;
+	border-bottom: solid #1a356e 1px;
+	cursor: pointer;
+	
+	font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+	font-weight:bold;
+	font-size:12px;
+}
+
+div.details
+{
+	width: 225px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 13px;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	color: #333;
+	line-height: 1.28;
+	text-align: left;
+	direction: ltr;
+}
+
+#ginormousAppName
+{
+	color: #1C2A47;
+	font-size: 20px;
+	font-weight: bold;
+	line-height: 1.28;
+	text-align: left;
+	direction: ltr;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	margin-left: 10px;
+}
+
+#introText
+{
+	font-size: 13px;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	color: #333;
+	line-height: 1.28;
+	text-align: left;
+	direction: ltr;
+}
+
+#like
+{
+	display: inline;
+	float: right;
+}
+
+.toolbar
+{
+	float:right;
+	font-size: 13px;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	color: #333;
+	line-height: 1.28;
+	text-align: left;
+	direction: ltr;
 }
