--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
-div.friend
+div.friend_data_container
 {
-	height: 50px;
-	width: 450px;
+	height: 70px;
+	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
 	border-top-style: solid;
 	border-top-width: 1px;
 	border-top-color: #E9E9E9;
+}
+
+div.friend
+{
+	float: right;
+	height: 50px;
+	width: 450px;
 	padding: 10px 5px 10px 5px;
+	
+}
+
+div.friend_position
+{
+	float: left;
+	height: 65px;
+	width: 25px;
+	text-align: center;
+}
+
+span.position_number
+{
+	position: relative;
+	top: 22px;
+	color: #D9D9D9;
+	font-weight: bold;
+	font-size: 1.2em;
 }
 
 div.friend:hover
@@ -195,4 +220,10 @@ div.details
 	line-height: 1.28;
 	text-align: left;
 	direction: ltr;
+}
+
+div.search
+{
+	float: right;
+	margin-right: 30px;
 }
